// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Qvain should render correctly 1`] = `
<ContextProvider
  value={
    Object {
      "Env": Env {
        "Flags": Flags {
          "fetchingSupportedFlags": false,
          "flagEnabled": [Function],
          "flags": Object {
            "METAX_API_V2": false,
          },
          "overrides": Object {},
          "supportedFlags": null,
        },
        "app": undefined,
        "appConfigLoaded": false,
        "etsinHost": "",
        "getEtsinUrl": [Function],
        "getQvainUrl": [Function],
        "history": RouterStore {
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "history": null,
          "location": null,
          "push": [Function],
          "replace": [Function],
        },
        "qvainHost": "",
        "ssoCookieDomain": "",
        "ssoPrefix": "",
      },
      "Locale": Locale {
        "Accessibility": Accessibility {
          "Env": Env {
            "Flags": Flags {
              "fetchingSupportedFlags": false,
              "flagEnabled": [Function],
              "flags": Object {
                "METAX_API_V2": false,
              },
              "overrides": Object {},
              "supportedFlags": null,
            },
            "app": undefined,
            "appConfigLoaded": false,
            "etsinHost": "",
            "getEtsinUrl": [Function],
            "getQvainUrl": [Function],
            "history": RouterStore {
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "history": null,
              "location": null,
              "push": [Function],
              "replace": [Function],
            },
            "qvainHost": "",
            "ssoCookieDomain": "",
            "ssoPrefix": "",
          },
          "announce": [Function],
          "assertiveAnnouncement": "",
          "focusableElement": Object {
            "current": null,
          },
          "politeAnnouncement": "",
          "userIsTabbing": false,
        },
        "ElasticQuery": ElasticQuery {
          "Env": Env {
            "Flags": Flags {
              "fetchingSupportedFlags": false,
              "flagEnabled": [Function],
              "flags": Object {
                "METAX_API_V2": false,
              },
              "overrides": Object {},
              "supportedFlags": null,
            },
            "app": undefined,
            "appConfigLoaded": false,
            "etsinHost": "",
            "getEtsinUrl": [Function],
            "getQvainUrl": [Function],
            "history": RouterStore {
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "history": null,
              "location": null,
              "push": [Function],
              "replace": [Function],
            },
            "qvainHost": "",
            "ssoCookieDomain": "",
            "ssoPrefix": "",
          },
          "aggregations": Object {
            "access_type_en": Object {
              "terms": Object {
                "field": "access_rights.access_type.pref_label.en.keyword",
              },
            },
            "access_type_fi": Object {
              "terms": Object {
                "field": "access_rights.access_type.pref_label.fi.keyword",
              },
            },
            "all_keywords_en": Object {
              "terms": Object {
                "field": "all_keywords_en",
                "size": 40,
              },
            },
            "all_keywords_fi": Object {
              "terms": Object {
                "field": "all_keywords_fi",
                "size": 40,
              },
            },
            "creator": Object {
              "terms": Object {
                "field": "creator_name.keyword",
                "size": 40,
              },
            },
            "data_catalog_en": Object {
              "terms": Object {
                "field": "data_catalog.en",
              },
            },
            "data_catalog_fi": Object {
              "terms": Object {
                "field": "data_catalog.fi",
              },
            },
            "field_of_science_en": Object {
              "terms": Object {
                "field": "field_of_science.pref_label.en.keyword",
                "size": 40,
              },
            },
            "field_of_science_fi": Object {
              "terms": Object {
                "field": "field_of_science.pref_label.fi.keyword",
                "size": 40,
              },
            },
            "file_type_en": Object {
              "terms": Object {
                "field": "file_type.pref_label.en.keyword",
              },
            },
            "file_type_fi": Object {
              "terms": Object {
                "field": "file_type.pref_label.fi.keyword",
              },
            },
            "infrastructure_en": Object {
              "terms": Object {
                "field": "infrastructure.pref_label.en.keyword",
              },
            },
            "infrastructure_fi": Object {
              "terms": Object {
                "field": "infrastructure.pref_label.fi.keyword",
              },
            },
            "organization_name_en": Object {
              "terms": Object {
                "field": "organization_name_en.keyword",
                "size": 40,
              },
            },
            "organization_name_fi": Object {
              "terms": Object {
                "field": "organization_name_fi.keyword",
                "size": 40,
              },
            },
            "project_name_en": Object {
              "terms": Object {
                "field": "project_name_en.keyword",
                "size": 40,
              },
            },
            "project_name_fi": Object {
              "terms": Object {
                "field": "project_name_fi.keyword",
                "size": 40,
              },
            },
          },
          "filter": Array [],
          "includePasDatasets": false,
          "loading": false,
          "pageNum": 1,
          "perPage": 20,
          "results": Object {
            "aggregations": Array [],
            "hits": Array [],
            "total": 0,
          },
          "search": "",
          "sorting": "best",
        },
        "Env": Env {
          "Flags": Flags {
            "fetchingSupportedFlags": false,
            "flagEnabled": [Function],
            "flags": Object {
              "METAX_API_V2": false,
            },
            "overrides": Object {},
            "supportedFlags": null,
          },
          "app": undefined,
          "appConfigLoaded": false,
          "etsinHost": "",
          "getEtsinUrl": [Function],
          "getQvainUrl": [Function],
          "history": RouterStore {
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "history": null,
            "location": null,
            "push": [Function],
            "replace": [Function],
          },
          "qvainHost": "",
          "ssoCookieDomain": "",
          "ssoPrefix": "",
        },
        "currentLang": "en",
        "getMatchingLang": [Function],
        "getValueTranslation": [Function],
        "languages": Array [
          "en",
          "fi",
        ],
      },
      "Matomo": Object {
        "recordEvent": [MockFunction],
      },
      "Qvain": Qvain {
        "AccessType": AccessType {
          "Model": [Function],
          "Parent": [Circular],
          "Schema": ObjectSchema {
            "_blacklist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_blacklistError": undefined,
            "_excludedEdges": Array [],
            "_nodes": Array [
              "url",
              "name",
            ],
            "_sortErrors": [Function],
            "_typeError": [Function],
            "_whitelist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_whitelistError": undefined,
            "conditions": Array [],
            "deps": Array [],
            "exclusiveTests": Object {},
            "fields": Object {
              "name": ObjectSchema {
                "_blacklist": ReferenceSet {
                  "list": Set {},
                  "refs": Map {},
                },
                "_blacklistError": undefined,
                "_excludedEdges": Array [],
                "_nodes": Array [],
                "_sortErrors": [Function],
                "_typeError": [Function],
                "_whitelist": ReferenceSet {
                  "list": Set {},
                  "refs": Map {},
                },
                "_whitelistError": undefined,
                "conditions": Array [],
                "deps": Array [],
                "exclusiveTests": Object {},
                "fields": Object {},
                "spec": Object {
                  "abortEarly": true,
                  "nullable": true,
                  "presence": "optional",
                  "recursive": true,
                  "strict": false,
                  "strip": false,
                },
                "tests": Array [],
                "transforms": Array [
                  [Function],
                ],
                "type": "object",
              },
              "url": StringSchema {
                "_blacklist": ReferenceSet {
                  "list": Set {},
                  "refs": Map {},
                },
                "_blacklistError": undefined,
                "_mutate": undefined,
                "_typeError": [Function],
                "_whitelist": ReferenceSet {
                  "list": Set {},
                  "refs": Map {},
                },
                "_whitelistError": undefined,
                "conditions": Array [],
                "deps": Array [],
                "exclusiveTests": Object {
                  "required": true,
                  "url": false,
                },
                "spec": Object {
                  "abortEarly": true,
                  "nullable": false,
                  "presence": "required",
                  "recursive": true,
                  "strict": false,
                  "strip": false,
                },
                "tests": Array [
                  [Function],
                  [Function],
                ],
                "transforms": Array [
                  [Function],
                ],
                "type": "string",
              },
            },
            "spec": Object {
              "abortEarly": true,
              "nullable": false,
              "presence": "optional",
              "recursive": true,
              "strict": false,
              "strip": false,
            },
            "tests": Array [],
            "transforms": Array [
              [Function],
            ],
            "type": "object",
          },
          "defaultValue": Object {
            "name": undefined,
            "url": "http://uri.suomi.fi/codelist/fairdata/access_type/code/open",
          },
          "set": [Function],
          "toBackend": [Function],
          "validationError": null,
          "value": Object {
            "name": undefined,
            "url": "http://uri.suomi.fi/codelist/fairdata/access_type/code/open",
          },
        },
        "Actors": Actors {
          "Qvain": [Circular],
          "actorInEdit": null,
          "actors": Array [],
          "fromBackend": [Function],
          "getDatasetOrganizations": [Function],
          "getReferenceOrganizations": [Function],
          "getReferenceOrganizationsForActor": [Function],
          "loadingReferenceOrganizations": Object {},
          "onSuccessfulCreationCallbacks": Array [],
          "orphanActors": Array [],
          "otherActorsHaveRole": [Function],
          "referenceOrganizationErrors": Object {},
          "referenceOrganizations": Object {},
          "setSelectedActor": undefined,
          "toBackend": [Function],
        },
        "DatasetLanguages": DatasetLanguages {
          "Model": [Function],
          "Parent": [Circular],
          "defaultItem": undefined,
          "defaultStorageFactory": [Function],
          "item": undefined,
          "itemStr": "",
          "storage": Array [],
          "toBackend": [Function],
          "validationError": null,
        },
        "Description": Description {
          "Parent": [Circular],
          "Schema": ObjectSchema {
            "_blacklist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_blacklistError": undefined,
            "_excludedEdges": Array [],
            "_nodes": Array [
              "en",
              "fi",
            ],
            "_sortErrors": [Function],
            "_typeError": [Function],
            "_whitelist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_whitelistError": undefined,
            "conditions": Array [],
            "deps": Array [],
            "exclusiveTests": Object {},
            "fields": Object {
              "en": StringSchema {
                "_blacklist": ReferenceSet {
                  "list": Set {},
                  "refs": Map {},
                },
                "_blacklistError": undefined,
                "_typeError": [Function],
                "_whitelist": ReferenceSet {
                  "list": Set {},
                  "refs": Map {},
                },
                "_whitelistError": undefined,
                "conditions": Array [],
                "deps": Array [],
                "exclusiveTests": Object {
                  "max": true,
                },
                "spec": Object {
                  "abortEarly": true,
                  "nullable": false,
                  "presence": "optional",
                  "recursive": true,
                  "strict": false,
                  "strip": false,
                },
                "tests": Array [
                  [Function],
                ],
                "transforms": Array [
                  [Function],
                ],
                "type": "string",
              },
              "fi": BaseSchema {
                "_blacklist": ReferenceSet {
                  "list": Set {},
                  "refs": Map {},
                },
                "_blacklistError": undefined,
                "_typeError": [Function],
                "_whitelist": ReferenceSet {
                  "list": Set {},
                  "refs": Map {},
                },
                "_whitelistError": undefined,
                "conditions": Array [
                  Condition {
                    "fn": [Function],
                    "refs": Array [
                      Reference {
                        "getter": [Function],
                        "isContext": false,
                        "isSibling": true,
                        "isValue": false,
                        "key": "en",
                        "map": undefined,
                        "path": "en",
                      },
                    ],
                  },
                ],
                "deps": Array [
                  "en",
                ],
                "exclusiveTests": Object {},
                "spec": Object {
                  "abortEarly": true,
                  "nullable": false,
                  "presence": "optional",
                  "recursive": true,
                  "strict": false,
                  "strip": false,
                },
                "tests": Array [],
                "transforms": Array [],
                "type": "mixed",
              },
            },
            "spec": Object {
              "abortEarly": true,
              "nullable": false,
              "presence": "optional",
              "recursive": true,
              "strict": false,
              "strip": false,
            },
            "tests": Array [],
            "transforms": Array [
              [Function],
            ],
            "type": "object",
          },
          "defaultValue": Object {
            "en": "",
            "fi": "",
          },
          "set": [Function],
          "toBackend": [Function],
          "validationError": null,
          "value": Object {
            "en": "",
            "fi": "",
          },
        },
        "EmbargoExpDate": EmbargoExpDate {
          "Parent": [Circular],
          "Schema": StringSchema {
            "_blacklist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_blacklistError": undefined,
            "_typeError": [Function],
            "_whitelist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_whitelistError": undefined,
            "conditions": Array [],
            "deps": Array [],
            "exclusiveTests": Object {
              "is a date string": false,
            },
            "spec": Object {
              "abortEarly": true,
              "nullable": true,
              "presence": "optional",
              "recursive": true,
              "strict": false,
              "strip": false,
            },
            "tests": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
            "type": "string",
          },
          "defaultValue": undefined,
          "set": [Function],
          "toBackend": [Function],
          "validationError": null,
          "value": undefined,
        },
        "Env": Env {
          "Flags": Flags {
            "fetchingSupportedFlags": false,
            "flagEnabled": [Function],
            "flags": Object {
              "METAX_API_V2": false,
            },
            "overrides": Object {},
            "supportedFlags": null,
          },
          "app": undefined,
          "appConfigLoaded": false,
          "etsinHost": "",
          "getEtsinUrl": [Function],
          "getQvainUrl": [Function],
          "history": RouterStore {
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "history": null,
            "location": null,
            "push": [Function],
            "replace": [Function],
          },
          "qvainHost": "",
          "ssoCookieDomain": "",
          "ssoPrefix": "",
        },
        "FieldOfSciences": FieldOfSciences {
          "Model": [Function],
          "Parent": [Circular],
          "defaultItem": undefined,
          "defaultStorageFactory": [Function],
          "item": undefined,
          "itemStr": "",
          "storage": Array [],
          "toBackend": [Function],
          "validationError": null,
        },
        "Files": Files {
          "AddItemsView": AddItemsView {
            "Files": [Circular],
            "checkedState": Object {},
            "defaultShowLimit": 20,
            "getTopmostChecked": [Function],
            "isOpen": [Function],
            "openState": Object {},
            "showLimitIncrement": 20,
            "showLimitState": Object {},
          },
          "Qvain": [Circular],
          "SelectedItemsView": SelectedItemsView {
            "Files": [Circular],
            "checkedState": Object {},
            "defaultShowLimit": 20,
            "getTopmostChecked": [Function],
            "hideRemoved": false,
            "isOpen": [Function],
            "openState": Object {},
            "showLimitIncrement": 20,
            "showLimitState": Object {},
          },
          "addItem": [Function],
          "cache": Object {},
          "cancelOnReset": [Function],
          "datasetIdentifier": null,
          "draftOfHasProject": null,
          "fetchRootIdentifier": [Function],
          "getEquivalentItemScope": [Function],
          "getItemByPath": [Function],
          "getItemPath": [Function],
          "inEdit": undefined,
          "initialLoadCount": 200,
          "loadingDraftOfProjects": null,
          "loadingMetadata": null,
          "loadingProjectInfo": null,
          "loadingProjectRoot": null,
          "metadataToMetax": [Function],
          "originalMetadata": Object {},
          "projectLocked": false,
          "promiseManager": PromiseManager {
            "add": [Function],
            "promises": Array [],
          },
          "refreshModalDirectory": null,
          "root": null,
          "selectedProject": undefined,
        },
        "Infrastructures": Infrastructures {
          "Model": [Function],
          "Parent": [Circular],
          "defaultItem": undefined,
          "defaultStorageFactory": [Function],
          "item": undefined,
          "itemStr": "",
          "storage": Array [],
          "toBackend": [Function],
          "validationError": null,
        },
        "IssuedDate": IssuedDate {
          "Parent": [Circular],
          "Schema": StringSchema {
            "_blacklist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_blacklistError": undefined,
            "_typeError": [Function],
            "_whitelist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_whitelistError": undefined,
            "conditions": Array [],
            "deps": Array [],
            "exclusiveTests": Object {
              "is a date string": false,
            },
            "spec": Object {
              "abortEarly": true,
              "nullable": true,
              "presence": "optional",
              "recursive": true,
              "strict": false,
              "strip": false,
            },
            "tests": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
            "type": "string",
          },
          "defaultValue": "moment formatted date: YYYY-MM-DD",
          "set": [Function],
          "toBackend": [Function],
          "validationError": null,
          "value": "moment formatted date: YYYY-MM-DD",
        },
        "Keywords": Keywords {
          "Parent": [Circular],
          "Schema": ArraySchema {
            "_blacklist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_blacklistError": undefined,
            "_mutate": undefined,
            "_typeError": [Function],
            "_whitelist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_whitelistError": undefined,
            "conditions": Array [],
            "deps": Array [],
            "exclusiveTests": Object {
              "required": true,
            },
            "innerType": StringSchema {
              "_blacklist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_blacklistError": undefined,
              "_typeError": [Function],
              "_whitelist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_whitelistError": undefined,
              "conditions": Array [],
              "deps": Array [],
              "exclusiveTests": Object {
                "max": true,
              },
              "spec": Object {
                "abortEarly": true,
                "nullable": false,
                "presence": "optional",
                "recursive": true,
                "strict": false,
                "strip": false,
              },
              "tests": Array [
                [Function],
              ],
              "transforms": Array [
                [Function],
              ],
              "type": "string",
            },
            "spec": Object {
              "abortEarly": true,
              "nullable": false,
              "presence": "required",
              "recursive": true,
              "strict": false,
              "strip": false,
            },
            "tests": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
            "type": "array",
          },
          "defaultItem": undefined,
          "defaultStorageFactory": [Function],
          "fromBackend": [Function],
          "item": undefined,
          "itemSchema": StringSchema {
            "_blacklist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_blacklistError": undefined,
            "_typeError": [Function],
            "_whitelist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_whitelistError": undefined,
            "conditions": Array [],
            "deps": Array [],
            "exclusiveTests": Object {
              "max": true,
            },
            "spec": Object {
              "abortEarly": true,
              "nullable": false,
              "presence": "optional",
              "recursive": true,
              "strict": false,
              "strip": false,
            },
            "tests": Array [
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
            "type": "string",
          },
          "itemStr": "",
          "storage": Array [],
          "toBackend": [Function],
          "translationsRoot": "qvain.description.keywords",
          "validationError": null,
        },
        "Licenses": Licenses {
          "Model": [Function],
          "Parent": [Circular],
          "defaultItem": undefined,
          "defaultStorageFactory": [Function],
          "fromBackend": [Function],
          "item": undefined,
          "itemStr": "",
          "storage": Array [
            Object {
              "identifier": "http://uri.suomi.fi/codelist/fairdata/license/code/CC-BY-4.0",
              "name": undefined,
            },
          ],
          "toBackend": [Function],
          "validationError": null,
        },
        "OtherIdentifiers": OtherIdentifiers {
          "Parent": [Circular],
          "Schema": ArraySchema {
            "_blacklist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_blacklistError": undefined,
            "_typeError": [Function],
            "_whitelist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_whitelistError": undefined,
            "conditions": Array [],
            "deps": Array [],
            "exclusiveTests": Object {},
            "innerType": StringSchema {
              "_blacklist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_blacklistError": undefined,
              "_typeError": [Function],
              "_whitelist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_whitelistError": undefined,
              "conditions": Array [],
              "deps": Array [],
              "exclusiveTests": Object {
                "max": true,
                "min": true,
                "url": false,
              },
              "spec": Object {
                "abortEarly": true,
                "nullable": false,
                "presence": "optional",
                "recursive": true,
                "strict": false,
                "strip": false,
              },
              "tests": Array [
                [Function],
                [Function],
                [Function],
              ],
              "transforms": Array [
                [Function],
              ],
              "type": "string",
            },
            "spec": Object {
              "abortEarly": true,
              "nullable": true,
              "presence": "optional",
              "recursive": true,
              "strict": false,
              "strip": false,
            },
            "tests": Array [],
            "transforms": Array [
              [Function],
            ],
            "type": "array",
          },
          "alreadyAddedError": "qvain.description.otherIdentifiers.alreadyAdded",
          "defaultItem": undefined,
          "defaultStorageFactory": [Function],
          "item": undefined,
          "itemSchema": StringSchema {
            "_blacklist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_blacklistError": undefined,
            "_typeError": [Function],
            "_whitelist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_whitelistError": undefined,
            "conditions": Array [],
            "deps": Array [],
            "exclusiveTests": Object {
              "max": true,
              "min": true,
              "url": false,
            },
            "spec": Object {
              "abortEarly": true,
              "nullable": false,
              "presence": "optional",
              "recursive": true,
              "strict": false,
              "strip": false,
            },
            "tests": Array [
              [Function],
              [Function],
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
            "type": "string",
          },
          "itemStr": "",
          "storage": Array [],
          "toBackend": [Function],
          "translationsRoot": "qvain.description.otherIdentifiers",
          "validationError": null,
        },
        "Projects": Projects {
          "projects": Array [],
          "readonly": false,
          "toBackend": [Function],
        },
        "Provenances": Provenances {
          "Model": [Function],
          "Parent": [Circular],
          "Qvain": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "create": [Function],
          "detachRefs": [Function],
          "editMode": false,
          "fieldName": "provenances",
          "hasChanged": false,
          "inEdit": undefined,
          "provenancesWithNonExistingActors": Array [],
          "references": Array [
            "associations",
            "usedEntities",
            "spatials",
          ],
          "reset": [Function],
          "saveEdited": [Function],
          "saveNew": [Function],
          "selectedActor": undefined,
          "storage": Array [],
          "validationError": undefined,
        },
        "RelatedResources": RelatedResources {
          "Model": [Function],
          "Parent": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "create": [Function],
          "detachRefs": [Function],
          "editMode": false,
          "fieldName": "relatedResources",
          "fromBackend": [Function],
          "hasChanged": false,
          "inEdit": undefined,
          "references": Array [],
          "relatedResourceToBackend": [Function],
          "reset": [Function],
          "saveEdited": [Function],
          "saveNew": [Function],
          "storage": Array [],
          "toBackend": [Function],
          "validationError": undefined,
        },
        "RestrictionGrounds": RestrictionGrounds {
          "Model": [Function],
          "Parent": [Circular],
          "Schema": StringSchema {
            "_blacklist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_blacklistError": undefined,
            "_mutate": undefined,
            "_typeError": [Function],
            "_whitelist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_whitelistError": undefined,
            "conditions": Array [],
            "deps": Array [],
            "exclusiveTests": Object {
              "required": true,
              "url": false,
            },
            "spec": Object {
              "abortEarly": true,
              "nullable": false,
              "presence": "required",
              "recursive": true,
              "strict": false,
              "strip": false,
            },
            "tests": Array [
              [Function],
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
            "type": "string",
          },
          "defaultValue": undefined,
          "fromBackend": [Function],
          "set": [Function],
          "toBackend": [Function],
          "validationError": null,
          "value": undefined,
        },
        "Spatials": Spatials {
          "Model": [Function],
          "Parent": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "clone": [Function],
          "cloneRefs": [Function],
          "create": [Function],
          "detachRefs": [Function],
          "editMode": false,
          "fieldName": "spatials",
          "fromBackend": [Function],
          "hasChanged": false,
          "inEdit": undefined,
          "references": Array [],
          "reset": [Function],
          "saveEdited": [Function],
          "saveNew": [Function],
          "spatialToBackend": [Function],
          "storage": Array [],
          "toBackend": [Function],
          "validationError": undefined,
        },
        "SubjectHeadings": SubjectHeadings {
          "Model": [Function],
          "Parent": [Circular],
          "defaultItem": undefined,
          "defaultStorageFactory": [Function],
          "item": undefined,
          "itemStr": "",
          "storage": Array [],
          "toBackend": [Function],
          "validationError": null,
        },
        "Submit": Submit {
          "Qvain": [Circular],
          "checkDoiCompability": [Function],
          "createNewDraft": [Function],
          "draftValidationError": Array [],
          "error": undefined,
          "isLoading": false,
          "mergeDraft": Object {
            "draftFunction": [Function],
            "publishFunction": [Function],
          },
          "mergeDraftWithoutUpdating": [Function],
          "publishDraft": Object {
            "draftFunction": [Function],
            "publishFunction": [Function],
          },
          "publishNewDataset": Object {
            "draftFunction": [Function],
            "publishFunction": [Function],
          },
          "publishValidationError": Array [],
          "publishWithoutUpdating": [Function],
          "republish": Object {
            "draftFunction": [Function],
            "publishFunction": [Function],
          },
          "response": null,
          "savePublishedAsDraft": [Function],
          "updateCumulativeState": [Function],
          "updateDataset": [Function],
          "updateFiles": [Function],
          "useDoiModalIsOpen": false,
        },
        "Temporals": Temporals {
          "Model": [Function],
          "Parent": [Circular],
          "Template": [Function],
          "attachRefs": [Function],
          "cloneRefs": [Function],
          "create": [Function],
          "detachRefs": [Function],
          "editMode": false,
          "fieldName": "temporals",
          "fromBackend": [Function],
          "hasChanged": false,
          "inEdit": Object {
            "endDate": undefined,
            "startDate": undefined,
            "uiid": 0,
          },
          "references": Array [],
          "reset": [Function],
          "saveEdited": [Function],
          "saveNew": [Function],
          "storage": Array [],
          "toBackend": [Function],
          "validationError": undefined,
        },
        "Title": Title {
          "Parent": [Circular],
          "Schema": ObjectSchema {
            "_blacklist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_blacklistError": undefined,
            "_excludedEdges": Array [],
            "_nodes": Array [
              "en",
              "fi",
            ],
            "_sortErrors": [Function],
            "_typeError": [Function],
            "_whitelist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_whitelistError": undefined,
            "conditions": Array [],
            "deps": Array [],
            "exclusiveTests": Object {},
            "fields": Object {
              "en": StringSchema {
                "_blacklist": ReferenceSet {
                  "list": Set {},
                  "refs": Map {},
                },
                "_blacklistError": undefined,
                "_typeError": [Function],
                "_whitelist": ReferenceSet {
                  "list": Set {},
                  "refs": Map {},
                },
                "_whitelistError": undefined,
                "conditions": Array [],
                "deps": Array [],
                "exclusiveTests": Object {
                  "max": true,
                },
                "spec": Object {
                  "abortEarly": true,
                  "nullable": false,
                  "presence": "optional",
                  "recursive": true,
                  "strict": false,
                  "strip": false,
                },
                "tests": Array [
                  [Function],
                ],
                "transforms": Array [
                  [Function],
                ],
                "type": "string",
              },
              "fi": BaseSchema {
                "_blacklist": ReferenceSet {
                  "list": Set {},
                  "refs": Map {},
                },
                "_blacklistError": undefined,
                "_typeError": [Function],
                "_whitelist": ReferenceSet {
                  "list": Set {},
                  "refs": Map {},
                },
                "_whitelistError": undefined,
                "conditions": Array [
                  Condition {
                    "fn": [Function],
                    "refs": Array [
                      Reference {
                        "getter": [Function],
                        "isContext": false,
                        "isSibling": true,
                        "isValue": false,
                        "key": "en",
                        "map": undefined,
                        "path": "en",
                      },
                    ],
                  },
                ],
                "deps": Array [
                  "en",
                ],
                "exclusiveTests": Object {},
                "spec": Object {
                  "abortEarly": true,
                  "nullable": false,
                  "presence": "optional",
                  "recursive": true,
                  "strict": false,
                  "strip": false,
                },
                "tests": Array [],
                "transforms": Array [],
                "type": "mixed",
              },
            },
            "spec": Object {
              "abortEarly": true,
              "nullable": false,
              "presence": "optional",
              "recursive": true,
              "strict": false,
              "strip": false,
            },
            "tests": Array [],
            "transforms": Array [
              [Function],
            ],
            "type": "object",
          },
          "defaultValue": Object {
            "en": "",
            "fi": "",
          },
          "set": [Function],
          "toBackend": [Function],
          "validationError": null,
          "value": Object {
            "en": "",
            "fi": "",
          },
        },
        "changed": false,
        "clearMetadataModalFile": undefined,
        "createExternalResourceUIId": [Function],
        "createLooseActorPromise": [Function],
        "createLooseProvenancePromise": [Function],
        "cumulativeState": 0,
        "dataCatalog": undefined,
        "deprecated": false,
        "deselectChildren": [Function],
        "deselectParents": [Function],
        "existingDirectories": Array [],
        "existingFiles": Array [],
        "extResFormOpen": false,
        "externalResourceInEdit": Object {
          "accessUrl": "",
          "downloadUrl": "",
          "id": undefined,
          "title": "",
          "useCategory": "",
        },
        "externalResources": Array [],
        "fixDeprecatedModalOpen": false,
        "hierarchy": Object {},
        "idaPickerOpen": false,
        "inEdit": undefined,
        "mergeArraysByIdentifier": [Function],
        "metadataModalFile": undefined,
        "newCumulativeState": 0,
        "original": undefined,
        "preservationState": 0,
        "promptLooseActors": undefined,
        "promptLooseProvenances": undefined,
        "provenancesWithNonExistingActors": Array [],
        "resourceInEdit": undefined,
        "resources": Array [
          Title {
            "Parent": [Circular],
            "Schema": ObjectSchema {
              "_blacklist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_blacklistError": undefined,
              "_excludedEdges": Array [],
              "_nodes": Array [
                "en",
                "fi",
              ],
              "_sortErrors": [Function],
              "_typeError": [Function],
              "_whitelist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_whitelistError": undefined,
              "conditions": Array [],
              "deps": Array [],
              "exclusiveTests": Object {},
              "fields": Object {
                "en": StringSchema {
                  "_blacklist": ReferenceSet {
                    "list": Set {},
                    "refs": Map {},
                  },
                  "_blacklistError": undefined,
                  "_typeError": [Function],
                  "_whitelist": ReferenceSet {
                    "list": Set {},
                    "refs": Map {},
                  },
                  "_whitelistError": undefined,
                  "conditions": Array [],
                  "deps": Array [],
                  "exclusiveTests": Object {
                    "max": true,
                  },
                  "spec": Object {
                    "abortEarly": true,
                    "nullable": false,
                    "presence": "optional",
                    "recursive": true,
                    "strict": false,
                    "strip": false,
                  },
                  "tests": Array [
                    [Function],
                  ],
                  "transforms": Array [
                    [Function],
                  ],
                  "type": "string",
                },
                "fi": BaseSchema {
                  "_blacklist": ReferenceSet {
                    "list": Set {},
                    "refs": Map {},
                  },
                  "_blacklistError": undefined,
                  "_typeError": [Function],
                  "_whitelist": ReferenceSet {
                    "list": Set {},
                    "refs": Map {},
                  },
                  "_whitelistError": undefined,
                  "conditions": Array [
                    Condition {
                      "fn": [Function],
                      "refs": Array [
                        Reference {
                          "getter": [Function],
                          "isContext": false,
                          "isSibling": true,
                          "isValue": false,
                          "key": "en",
                          "map": undefined,
                          "path": "en",
                        },
                      ],
                    },
                  ],
                  "deps": Array [
                    "en",
                  ],
                  "exclusiveTests": Object {},
                  "spec": Object {
                    "abortEarly": true,
                    "nullable": false,
                    "presence": "optional",
                    "recursive": true,
                    "strict": false,
                    "strip": false,
                  },
                  "tests": Array [],
                  "transforms": Array [],
                  "type": "mixed",
                },
              },
              "spec": Object {
                "abortEarly": true,
                "nullable": false,
                "presence": "optional",
                "recursive": true,
                "strict": false,
                "strip": false,
              },
              "tests": Array [],
              "transforms": Array [
                [Function],
              ],
              "type": "object",
            },
            "defaultValue": Object {
              "en": "",
              "fi": "",
            },
            "set": [Function],
            "toBackend": [Function],
            "validationError": null,
            "value": Object {
              "en": "",
              "fi": "",
            },
          },
          Description {
            "Parent": [Circular],
            "Schema": ObjectSchema {
              "_blacklist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_blacklistError": undefined,
              "_excludedEdges": Array [],
              "_nodes": Array [
                "en",
                "fi",
              ],
              "_sortErrors": [Function],
              "_typeError": [Function],
              "_whitelist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_whitelistError": undefined,
              "conditions": Array [],
              "deps": Array [],
              "exclusiveTests": Object {},
              "fields": Object {
                "en": StringSchema {
                  "_blacklist": ReferenceSet {
                    "list": Set {},
                    "refs": Map {},
                  },
                  "_blacklistError": undefined,
                  "_typeError": [Function],
                  "_whitelist": ReferenceSet {
                    "list": Set {},
                    "refs": Map {},
                  },
                  "_whitelistError": undefined,
                  "conditions": Array [],
                  "deps": Array [],
                  "exclusiveTests": Object {
                    "max": true,
                  },
                  "spec": Object {
                    "abortEarly": true,
                    "nullable": false,
                    "presence": "optional",
                    "recursive": true,
                    "strict": false,
                    "strip": false,
                  },
                  "tests": Array [
                    [Function],
                  ],
                  "transforms": Array [
                    [Function],
                  ],
                  "type": "string",
                },
                "fi": BaseSchema {
                  "_blacklist": ReferenceSet {
                    "list": Set {},
                    "refs": Map {},
                  },
                  "_blacklistError": undefined,
                  "_typeError": [Function],
                  "_whitelist": ReferenceSet {
                    "list": Set {},
                    "refs": Map {},
                  },
                  "_whitelistError": undefined,
                  "conditions": Array [
                    Condition {
                      "fn": [Function],
                      "refs": Array [
                        Reference {
                          "getter": [Function],
                          "isContext": false,
                          "isSibling": true,
                          "isValue": false,
                          "key": "en",
                          "map": undefined,
                          "path": "en",
                        },
                      ],
                    },
                  ],
                  "deps": Array [
                    "en",
                  ],
                  "exclusiveTests": Object {},
                  "spec": Object {
                    "abortEarly": true,
                    "nullable": false,
                    "presence": "optional",
                    "recursive": true,
                    "strict": false,
                    "strip": false,
                  },
                  "tests": Array [],
                  "transforms": Array [],
                  "type": "mixed",
                },
              },
              "spec": Object {
                "abortEarly": true,
                "nullable": false,
                "presence": "optional",
                "recursive": true,
                "strict": false,
                "strip": false,
              },
              "tests": Array [],
              "transforms": Array [
                [Function],
              ],
              "type": "object",
            },
            "defaultValue": Object {
              "en": "",
              "fi": "",
            },
            "set": [Function],
            "toBackend": [Function],
            "validationError": null,
            "value": Object {
              "en": "",
              "fi": "",
            },
          },
          SubjectHeadings {
            "Model": [Function],
            "Parent": [Circular],
            "defaultItem": undefined,
            "defaultStorageFactory": [Function],
            "item": undefined,
            "itemStr": "",
            "storage": Array [],
            "toBackend": [Function],
            "validationError": null,
          },
          Actors {
            "Qvain": [Circular],
            "actorInEdit": null,
            "actors": Array [],
            "fromBackend": [Function],
            "getDatasetOrganizations": [Function],
            "getReferenceOrganizations": [Function],
            "getReferenceOrganizationsForActor": [Function],
            "loadingReferenceOrganizations": Object {},
            "onSuccessfulCreationCallbacks": Array [],
            "orphanActors": Array [],
            "otherActorsHaveRole": [Function],
            "referenceOrganizationErrors": Object {},
            "referenceOrganizations": Object {},
            "setSelectedActor": undefined,
            "toBackend": [Function],
          },
          Spatials {
            "Model": [Function],
            "Parent": [Circular],
            "Template": [Function],
            "attachRefs": [Function],
            "clone": [Function],
            "cloneRefs": [Function],
            "create": [Function],
            "detachRefs": [Function],
            "editMode": false,
            "fieldName": "spatials",
            "fromBackend": [Function],
            "hasChanged": false,
            "inEdit": undefined,
            "references": Array [],
            "reset": [Function],
            "saveEdited": [Function],
            "saveNew": [Function],
            "spatialToBackend": [Function],
            "storage": Array [],
            "toBackend": [Function],
            "validationError": undefined,
          },
          Temporals {
            "Model": [Function],
            "Parent": [Circular],
            "Template": [Function],
            "attachRefs": [Function],
            "cloneRefs": [Function],
            "create": [Function],
            "detachRefs": [Function],
            "editMode": false,
            "fieldName": "temporals",
            "fromBackend": [Function],
            "hasChanged": false,
            "inEdit": Object {
              "endDate": undefined,
              "startDate": undefined,
              "uiid": 0,
            },
            "references": Array [],
            "reset": [Function],
            "saveEdited": [Function],
            "saveNew": [Function],
            "storage": Array [],
            "toBackend": [Function],
            "validationError": undefined,
          },
          Provenances {
            "Model": [Function],
            "Parent": [Circular],
            "Qvain": [Circular],
            "Template": [Function],
            "attachRefs": [Function],
            "cloneRefs": [Function],
            "create": [Function],
            "detachRefs": [Function],
            "editMode": false,
            "fieldName": "provenances",
            "hasChanged": false,
            "inEdit": undefined,
            "provenancesWithNonExistingActors": Array [],
            "references": Array [
              "associations",
              "usedEntities",
              "spatials",
            ],
            "reset": [Function],
            "saveEdited": [Function],
            "saveNew": [Function],
            "selectedActor": undefined,
            "storage": Array [],
            "validationError": undefined,
          },
          RelatedResources {
            "Model": [Function],
            "Parent": [Circular],
            "Template": [Function],
            "attachRefs": [Function],
            "cloneRefs": [Function],
            "create": [Function],
            "detachRefs": [Function],
            "editMode": false,
            "fieldName": "relatedResources",
            "fromBackend": [Function],
            "hasChanged": false,
            "inEdit": undefined,
            "references": Array [],
            "relatedResourceToBackend": [Function],
            "reset": [Function],
            "saveEdited": [Function],
            "saveNew": [Function],
            "storage": Array [],
            "toBackend": [Function],
            "validationError": undefined,
          },
          Infrastructures {
            "Model": [Function],
            "Parent": [Circular],
            "defaultItem": undefined,
            "defaultStorageFactory": [Function],
            "item": undefined,
            "itemStr": "",
            "storage": Array [],
            "toBackend": [Function],
            "validationError": null,
          },
          OtherIdentifiers {
            "Parent": [Circular],
            "Schema": ArraySchema {
              "_blacklist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_blacklistError": undefined,
              "_typeError": [Function],
              "_whitelist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_whitelistError": undefined,
              "conditions": Array [],
              "deps": Array [],
              "exclusiveTests": Object {},
              "innerType": StringSchema {
                "_blacklist": ReferenceSet {
                  "list": Set {},
                  "refs": Map {},
                },
                "_blacklistError": undefined,
                "_typeError": [Function],
                "_whitelist": ReferenceSet {
                  "list": Set {},
                  "refs": Map {},
                },
                "_whitelistError": undefined,
                "conditions": Array [],
                "deps": Array [],
                "exclusiveTests": Object {
                  "max": true,
                  "min": true,
                  "url": false,
                },
                "spec": Object {
                  "abortEarly": true,
                  "nullable": false,
                  "presence": "optional",
                  "recursive": true,
                  "strict": false,
                  "strip": false,
                },
                "tests": Array [
                  [Function],
                  [Function],
                  [Function],
                ],
                "transforms": Array [
                  [Function],
                ],
                "type": "string",
              },
              "spec": Object {
                "abortEarly": true,
                "nullable": true,
                "presence": "optional",
                "recursive": true,
                "strict": false,
                "strip": false,
              },
              "tests": Array [],
              "transforms": Array [
                [Function],
              ],
              "type": "array",
            },
            "alreadyAddedError": "qvain.description.otherIdentifiers.alreadyAdded",
            "defaultItem": undefined,
            "defaultStorageFactory": [Function],
            "item": undefined,
            "itemSchema": StringSchema {
              "_blacklist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_blacklistError": undefined,
              "_typeError": [Function],
              "_whitelist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_whitelistError": undefined,
              "conditions": Array [],
              "deps": Array [],
              "exclusiveTests": Object {
                "max": true,
                "min": true,
                "url": false,
              },
              "spec": Object {
                "abortEarly": true,
                "nullable": false,
                "presence": "optional",
                "recursive": true,
                "strict": false,
                "strip": false,
              },
              "tests": Array [
                [Function],
                [Function],
                [Function],
              ],
              "transforms": Array [
                [Function],
              ],
              "type": "string",
            },
            "itemStr": "",
            "storage": Array [],
            "toBackend": [Function],
            "translationsRoot": "qvain.description.otherIdentifiers",
            "validationError": null,
          },
          FieldOfSciences {
            "Model": [Function],
            "Parent": [Circular],
            "defaultItem": undefined,
            "defaultStorageFactory": [Function],
            "item": undefined,
            "itemStr": "",
            "storage": Array [],
            "toBackend": [Function],
            "validationError": null,
          },
          DatasetLanguages {
            "Model": [Function],
            "Parent": [Circular],
            "defaultItem": undefined,
            "defaultStorageFactory": [Function],
            "item": undefined,
            "itemStr": "",
            "storage": Array [],
            "toBackend": [Function],
            "validationError": null,
          },
          Keywords {
            "Parent": [Circular],
            "Schema": ArraySchema {
              "_blacklist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_blacklistError": undefined,
              "_mutate": undefined,
              "_typeError": [Function],
              "_whitelist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_whitelistError": undefined,
              "conditions": Array [],
              "deps": Array [],
              "exclusiveTests": Object {
                "required": true,
              },
              "innerType": StringSchema {
                "_blacklist": ReferenceSet {
                  "list": Set {},
                  "refs": Map {},
                },
                "_blacklistError": undefined,
                "_typeError": [Function],
                "_whitelist": ReferenceSet {
                  "list": Set {},
                  "refs": Map {},
                },
                "_whitelistError": undefined,
                "conditions": Array [],
                "deps": Array [],
                "exclusiveTests": Object {
                  "max": true,
                },
                "spec": Object {
                  "abortEarly": true,
                  "nullable": false,
                  "presence": "optional",
                  "recursive": true,
                  "strict": false,
                  "strip": false,
                },
                "tests": Array [
                  [Function],
                ],
                "transforms": Array [
                  [Function],
                ],
                "type": "string",
              },
              "spec": Object {
                "abortEarly": true,
                "nullable": false,
                "presence": "required",
                "recursive": true,
                "strict": false,
                "strip": false,
              },
              "tests": Array [
                [Function],
              ],
              "transforms": Array [
                [Function],
              ],
              "type": "array",
            },
            "defaultItem": undefined,
            "defaultStorageFactory": [Function],
            "fromBackend": [Function],
            "item": undefined,
            "itemSchema": StringSchema {
              "_blacklist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_blacklistError": undefined,
              "_typeError": [Function],
              "_whitelist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_whitelistError": undefined,
              "conditions": Array [],
              "deps": Array [],
              "exclusiveTests": Object {
                "max": true,
              },
              "spec": Object {
                "abortEarly": true,
                "nullable": false,
                "presence": "optional",
                "recursive": true,
                "strict": false,
                "strip": false,
              },
              "tests": Array [
                [Function],
              ],
              "transforms": Array [
                [Function],
              ],
              "type": "string",
            },
            "itemStr": "",
            "storage": Array [],
            "toBackend": [Function],
            "translationsRoot": "qvain.description.keywords",
            "validationError": null,
          },
          IssuedDate {
            "Parent": [Circular],
            "Schema": StringSchema {
              "_blacklist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_blacklistError": undefined,
              "_typeError": [Function],
              "_whitelist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_whitelistError": undefined,
              "conditions": Array [],
              "deps": Array [],
              "exclusiveTests": Object {
                "is a date string": false,
              },
              "spec": Object {
                "abortEarly": true,
                "nullable": true,
                "presence": "optional",
                "recursive": true,
                "strict": false,
                "strip": false,
              },
              "tests": Array [
                [Function],
              ],
              "transforms": Array [
                [Function],
              ],
              "type": "string",
            },
            "defaultValue": "moment formatted date: YYYY-MM-DD",
            "set": [Function],
            "toBackend": [Function],
            "validationError": null,
            "value": "moment formatted date: YYYY-MM-DD",
          },
          AccessType {
            "Model": [Function],
            "Parent": [Circular],
            "Schema": ObjectSchema {
              "_blacklist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_blacklistError": undefined,
              "_excludedEdges": Array [],
              "_nodes": Array [
                "url",
                "name",
              ],
              "_sortErrors": [Function],
              "_typeError": [Function],
              "_whitelist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_whitelistError": undefined,
              "conditions": Array [],
              "deps": Array [],
              "exclusiveTests": Object {},
              "fields": Object {
                "name": ObjectSchema {
                  "_blacklist": ReferenceSet {
                    "list": Set {},
                    "refs": Map {},
                  },
                  "_blacklistError": undefined,
                  "_excludedEdges": Array [],
                  "_nodes": Array [],
                  "_sortErrors": [Function],
                  "_typeError": [Function],
                  "_whitelist": ReferenceSet {
                    "list": Set {},
                    "refs": Map {},
                  },
                  "_whitelistError": undefined,
                  "conditions": Array [],
                  "deps": Array [],
                  "exclusiveTests": Object {},
                  "fields": Object {},
                  "spec": Object {
                    "abortEarly": true,
                    "nullable": true,
                    "presence": "optional",
                    "recursive": true,
                    "strict": false,
                    "strip": false,
                  },
                  "tests": Array [],
                  "transforms": Array [
                    [Function],
                  ],
                  "type": "object",
                },
                "url": StringSchema {
                  "_blacklist": ReferenceSet {
                    "list": Set {},
                    "refs": Map {},
                  },
                  "_blacklistError": undefined,
                  "_mutate": undefined,
                  "_typeError": [Function],
                  "_whitelist": ReferenceSet {
                    "list": Set {},
                    "refs": Map {},
                  },
                  "_whitelistError": undefined,
                  "conditions": Array [],
                  "deps": Array [],
                  "exclusiveTests": Object {
                    "required": true,
                    "url": false,
                  },
                  "spec": Object {
                    "abortEarly": true,
                    "nullable": false,
                    "presence": "required",
                    "recursive": true,
                    "strict": false,
                    "strip": false,
                  },
                  "tests": Array [
                    [Function],
                    [Function],
                  ],
                  "transforms": Array [
                    [Function],
                  ],
                  "type": "string",
                },
              },
              "spec": Object {
                "abortEarly": true,
                "nullable": false,
                "presence": "optional",
                "recursive": true,
                "strict": false,
                "strip": false,
              },
              "tests": Array [],
              "transforms": Array [
                [Function],
              ],
              "type": "object",
            },
            "defaultValue": Object {
              "name": undefined,
              "url": "http://uri.suomi.fi/codelist/fairdata/access_type/code/open",
            },
            "set": [Function],
            "toBackend": [Function],
            "validationError": null,
            "value": Object {
              "name": undefined,
              "url": "http://uri.suomi.fi/codelist/fairdata/access_type/code/open",
            },
          },
          Projects {
            "projects": Array [],
            "readonly": false,
            "toBackend": [Function],
          },
          Licenses {
            "Model": [Function],
            "Parent": [Circular],
            "defaultItem": undefined,
            "defaultStorageFactory": [Function],
            "fromBackend": [Function],
            "item": undefined,
            "itemStr": "",
            "storage": Array [
              Object {
                "identifier": "http://uri.suomi.fi/codelist/fairdata/license/code/CC-BY-4.0",
                "name": undefined,
              },
            ],
            "toBackend": [Function],
            "validationError": null,
          },
          EmbargoExpDate {
            "Parent": [Circular],
            "Schema": StringSchema {
              "_blacklist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_blacklistError": undefined,
              "_typeError": [Function],
              "_whitelist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_whitelistError": undefined,
              "conditions": Array [],
              "deps": Array [],
              "exclusiveTests": Object {
                "is a date string": false,
              },
              "spec": Object {
                "abortEarly": true,
                "nullable": true,
                "presence": "optional",
                "recursive": true,
                "strict": false,
                "strip": false,
              },
              "tests": Array [
                [Function],
              ],
              "transforms": Array [
                [Function],
              ],
              "type": "string",
            },
            "defaultValue": undefined,
            "set": [Function],
            "toBackend": [Function],
            "validationError": null,
            "value": undefined,
          },
          RestrictionGrounds {
            "Model": [Function],
            "Parent": [Circular],
            "Schema": StringSchema {
              "_blacklist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_blacklistError": undefined,
              "_mutate": undefined,
              "_typeError": [Function],
              "_whitelist": ReferenceSet {
                "list": Set {},
                "refs": Map {},
              },
              "_whitelistError": undefined,
              "conditions": Array [],
              "deps": Array [],
              "exclusiveTests": Object {
                "required": true,
                "url": false,
              },
              "spec": Object {
                "abortEarly": true,
                "nullable": false,
                "presence": "required",
                "recursive": true,
                "strict": false,
                "strip": false,
              },
              "tests": Array [
                [Function],
                [Function],
              ],
              "transforms": Array [
                [Function],
              ],
              "type": "string",
            },
            "defaultValue": undefined,
            "fromBackend": [Function],
            "set": [Function],
            "toBackend": [Function],
            "validationError": null,
            "value": undefined,
          },
        ],
        "selectedDirectories": Array [],
        "selectedFiles": Array [],
        "selectedProject": undefined,
        "useDoi": false,
      },
    }
  }
>
  <withRouter(undefined) />
</ContextProvider>
`;

exports[`Qvain.RightsAndLicenses should render <AccessType /> 1`] = `
<Card
  bottomContent={false}
>
  <form__LabelLarge
    htmlFor="accessTypeSelect"
  >
    <Translate
      component="span"
      content="qvain.rightsAndLicenses.accessType.title"
    />
  </form__LabelLarge>
  <Translate
    attributes={
      Object {
        "placeholder": "qvain.rightsAndLicenses.accessType.placeholder",
      }
    }
    clearable={true}
    component={[Function]}
    getOptionLabel={[Function]}
    getOptionValue={[Function]}
    inputId="accessTypeSelect"
    isDisabled={false}
    name="accessType"
    onBlur={[Function]}
    onChange={[Function]}
    options={Array []}
    value={
      Object {
        "name": undefined,
        "url": "http://uri.suomi.fi/codelist/fairdata/access_type/code/open",
      }
    }
  />
  <ValidationError />
</Card>
`;

exports[`Qvain.RightsAndLicenses should render <Licenses /> 1`] = `
<Card
  bottomContent={false}
>
  <form__LabelLarge
    htmlFor="licenseSelect"
  >
    <Translate
      component="span"
      content="qvain.rightsAndLicenses.license.title"
    />
  </form__LabelLarge>
  <Translate
    component="p"
    content="qvain.rightsAndLicenses.license.infoText"
  />
  <Translate
    attributes={
      Object {
        "placeholder": "qvain.rightsAndLicenses.license.placeholder",
      }
    }
    component={[Function]}
    createOptionPosition="first"
    getNewOptionData={[Function]}
    getOptionLabel={[Function]}
    getOptionValue={[Function]}
    inputId="licenseSelect"
    isClearable={false}
    isDisabled={false}
    isMulti={true}
    name="license"
    onChange={[Function]}
    options={Array []}
    styles={
      Object {
        "multiValue": [Function],
        "multiValueLabel": [Function],
      }
    }
    value={
      Array [
        Object {
          "identifier": "http://uri.suomi.fi/codelist/fairdata/license/code/CC-BY-4.0",
          "name": undefined,
        },
      ]
    }
  />
  <ValidationErrors
    errors={Array []}
  />
</Card>
`;

exports[`Qvain.RightsAndLicenses should render <RightsAndLicenses /> 1`] = `
<div
  className="container"
>
  <title__SectionTitle>
    <Translate
      component="span"
      content="qvain.rightsAndLicenses.title"
    />
    <Tooltip
      align="Right"
      close={[Function]}
      isOpen={false}
      text={<LicensesInfo />}
    >
      <HelpIcon
        aria-label="Rights And Licenses info"
        onClick={[Function]}
      />
    </Tooltip>
  </title__SectionTitle>
  <withFieldErrorBoundary(WithTheme(Component)) />
  <withFieldErrorBoundary(Component) />
</div>
`;
